# reprohash-core

./: .gitignore  .zenodo.json  CITATION.cff  DEVELOPMENT.md  MANIFEST.in  PLUGIN_README.md  README.md  ZENODO.json  ZENODO_README.md  paper.bib  paper.md  pyproject.toml  pytest.ini
.github/workflows/: coverage.yml  docs.yml  integration.yml  lint.yml  release.yml  security.yml  test.yaml  test.yml
docs/: API.md  FOR_REVIEWERS.md  GOVERNANCE.md  LIMITATIONS.md  PLUGIN_INTERFACE.md  PROVENANCE_SPEC.md  WHAT_THIS_IS_NOT.md
examples/ML_test/: download_data.py  job.ml.sub  model.py  run.sh  train.py
examples/dft_test/: calculate_energy.py  job.dfttest.sub  run.sh  structure.xyz
examples/qe_dft_test/: job.qe.sub
examples/qe_dft_test/mos2_test_A/: mos2.in
examples/rna_sequence_test/: job.bowtie.sub  run.sh
reprohash/: __init__.py  bundle.py  cli.py  env_plugins.py  runrecord.py  snapshot.py  verify.py
spec/: canonical-json-v1.yaml  hash-scope-v1.yaml  verification-profile-v2.yaml
tests/: conftest.py  test_bundle.py  test_env_plugins.py  test_runrecord.py  test_snapshot.py  test_verify.py
tests/test_vectors/v2.1/: test_basic_snapshot.json
