[project]
name = "reprohash-core"
version = "2.1.9"
description = "Creates cryptographic snapshots of computational input states and enables verification without re-execution."
authors = [
    {name = "Michael Atambo", email = "matambo4999@gmail.com"}
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage[toml]>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.setuptools]
packages = ["reprohash", "spec","tests","docs"]

[tool.setuptools.package-data]
reprohash = ["*.py"]
spec = ["*.yaml"]
docs = ["*.md"]
tests = ["*.py"]
